--- a/index.html
+++ b/index.html
@@ -4,18 +4,30 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
   <body>
     <div id="container">
 
       <!-- STRUTTURA header -->
       <header>
-
+        <i class="fas fa-mountain"></i>
+        <div id="nomesito">
+          NATURAL
+        </div>
       </header>
 
       <!-- STRUTTURA nav -->
       <nav>
-
+        <ul>
+          <li>HOME</li>
+          <li>ABOUT</li>
+          <li>PAGE TEMPLATES</li>
+          <li>A PARENT PAGE</li>
+          <li>FEATURES</li>
+          <li>BLOG</li>
+          <li>CONTACT</li>
+        </ul>
       </nav>
 
       <!-- STRUTTURA column -->
