fine contenuto tre colonne e fine es

--- a/index.html
+++ b/index.html
@@ -26,22 +26,34 @@
           <li>A PARENT PAGE</li>
           <li>FEATURES</li>
           <li>BLOG</li>
-          <li>CONTACT</li>
+          <li>CONTACT</li
         </ul>
       </nav>
 
       <!-- STRUTTURA column -->
       <div class="containercolumn">
         <div class="column column1">
-
+          <h3><i class="fas fa-dice"></i>  Organic Themes</h3>
+          <a href="http://www.google.com"> 5DayDeal!$2400 of resources for $87!</a>
+          <a href="http://www.google.com"> New Tearn Member, Jesse LEE</a>
+          <a href="http://www.google.com"> 2016 Organic Themes Survey!</a>
+          <a href="http://www.google.com"> New Release: WordPress Vacantion Rental Theme - suite</a>
         </div>
 
         <div class="column column2">
-
+          <h1>THREE COLUMN</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br><br><br> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <a href="https://www.youtube.com/watch?v=ysSxxIqKNN0">Excepteur sint occaecat cupidatat non proident</a>, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
         <div class="column column3">
+          <div class="riquadro1">
+            <h3>Text Widget</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </p>
+          </div>
 
+          <div class="riquadro2">
+            <h3>Recent Posts Widget</h3>
+            <a href="http://www.google.com"> Outdoor Styles</a>
         </div>
       </div>
     </div>
